fix(meaning): Meaning div
* Now the meaning of the word is hidden by default. To see it we have
to open the overlay.

--- a/style.css
+++ b/style.css
@@ -17,8 +17,7 @@
 }
 
 .contract {
-  width: fit-content !important;
-  height: fit-content !important;
+  display: none !important;
 }
 
 .openButton {
